--- a/manifest.json
+++ b/manifest.json
@@ -83,7 +83,12 @@
     }
   ],
   "r": {
-    "version": "4.5.1"
+    "version": "4.4.0"
+  },
+  "platform": {
+    "r": "4.4.0",
+    "os": "linux",
+    "pandoc": "2.19.2"
   }
 }
 
