--- a/manifest.json
+++ b/manifest.json
@@ -1,98 +1,38 @@
 {
-  "version": 1,
-  "metadata": {
-    "appmode": "shiny",
-    "primary_rmd": null,
-    "primary_html": null
-  },
-  "r": {
-    "version": "4.4.0"
-  },
-  "platform": {
-    "r": "4.2.3",
-    "os": "linux",
-    "pandoc": "2.19.2"
-  },
-  "package": [
-    {
-      "name": "shiny",
-      "version": "1.8.1"
+    "version": 1,
+    "metadata": {
+        "appmode": "shiny",
+        "primary_rmd": null,
+        "primary_html": null
     },
-    {
-      "name": "phyloseq",
-      "version": "1.46.0"
+    "r": {
+        "version": "4.4.0"
     },
-    {
-      "name": "ggplot2",
-      "version": "3.5.1"
+    "platform": {
+        "r": "4.4.0",
+        "os": "linux",
+        "pandoc": "2.19.2"
     },
-    {
-      "name": "dplyr",
-      "version": "1.1.4"
-    },
-    {
-      "name": "plotly",
-      "version": "4.11.1"
-    },
-    {
-      "name": "DT",
-      "version": "0.31"
-    },
-    {
-      "name": "vegan",
-      "version": "2.6-6"
-    },
-    {
-      "name": "ape",
-      "version": "5.8"
-    },
-    {
-      "name": "ggtree",
-      "version": "3.10.0"
-    },
-    {
-      "name": "metacoder",
-      "version": "0.3.7"
-    },
-    {
-      "name": "networkD3",
-      "version": "0.4.1"
-    },
-    {
-      "name": "heatmaply",
-      "version": "1.5.0"
-    },
-    {
-      "name": "dendextend",
-      "version": "1.17.1"
-    },
-    {
-      "name": "viridis",
-      "version": "0.6.5"
-    },
-    {
-      "name": "RColorBrewer",
-      "version": "1.1-3"
-    },
-    {
-      "name": "ggthemes",
-      "version": "4.2.4"
-    },
-    {
-      "name": "microbiome",
-      "version": "1.24.0"
-    },
-    {
-      "name": "BiocManager",
-      "version": "1.30.23"
-    },
-    {
-      "name": "tidyverse",
-      "version": "2.0.0"
-    },
-    {
-      "name": "purrr",
-      "version": "1.0.2"
-    }
-  ]
+    "package": [
+        {"package": "shiny", "version": "1.8.1"},
+        {"package": "phyloseq", "version": "1.46.0"},
+        {"package": "ggplot2", "version": "3.5.1"},
+        {"package": "dplyr", "version": "1.1.4"},
+        {"package": "plotly", "version": "4.11.1"},
+        {"package": "DT", "version": "0.31"},
+        {"package": "vegan", "version": "2.6-6"},
+        {"package": "ape", "version": "5.8"},
+        {"package": "ggtree", "version": "3.10.0"},
+        {"package": "metacoder", "version": "0.3.7"},
+        {"package": "networkD3", "version": "0.4.1"},
+        {"package": "heatmaply", "version": "1.5.0"},
+        {"package": "dendextend", "version": "1.17.1"},
+        {"package": "viridis", "version": "0.6.5"},
+        {"package": "RColorBrewer", "version": "1.1-3"},
+        {"package": "ggthemes", "version": "4.2.4"},
+        {"package": "microbiome", "version": "1.24.0"},
+        {"package": "BiocManager", "version": "1.30.23"},
+        {"package": "tidyverse", "version": "2.0.0"},
+        {"package": "purrr", "version": "1.0.2"}
+    ]
 }
